Some bug fixes related to SM pipeline generation

--- a/nbs/converters/to_sagemaker.ipynb
+++ b/nbs/converters/to_sagemaker.ipynb
@@ -1408,13 +1408,8 @@
     "    steps_param_meta,\n",
     "    steps_vars,\n",
     "):\n",
-    "    # Read in module file as lines.\n",
     "    ind = \"    \"\n",
     "    module_path = Path(lib_path(), lib_name, f\"{module_name.replace('.', '/')}.py\")\n",
-    "\n",
-    "    # Pass these in instead of replacing..\n",
-    "    # TODO needs to be step specific\n",
-    "    # pass these in\n",
     "\n",
     "    with open(module_path) as module_file:\n",
     "        module_lines = module_file.readlines()\n",
@@ -1441,8 +1436,7 @@
     "        ]\n",
     "\n",
     "        with open(sm_module_path, \"w\") as sm_module_file:\n",
-    "            sm_module_file.write(\"\".join(lines))\n",
-    "            sm_module_file.write(\"\\n\\n# SCIFLOW->SAGEMAKER ADAPTER FROM THIS POINT\\n\")\n",
+    "            sm_module_file.write(\"# SCIFLOW GENERATED SAGEMAKER MODULE - EDIT COMPANION NOTEBOOK\\n\")\n",
     "            sm_module_file.write(\"import boto3\\n\")\n",
     "            sm_module_file.write(\"import os\\n\")\n",
     "            sm_module_file.write(\"import sys\\n\")\n",
@@ -1451,6 +1445,23 @@
     "            sm_module_file.write(\"from pathlib import Path\\n\")\n",
     "            sm_module_file.write(\"import argparse\\n\")\n",
     "            sm_module_file.write(\"import subprocess\\n\")\n",
+    "            \n",
+    "            if is_processing_step(step):\n",
+    "                sm_module_file.write(\n",
+    "                    f'has_additional_dependencies = Path(\"/opt/ml/processing/requirements/requirements.txt\").exists()\\n'\n",
+    "                )\n",
+    "                sm_module_file.write(f\"if has_additional_dependencies:\\n\")\n",
+    "                sm_module_file.write(\n",
+    "                    f\"{ind}print('Installing additional dependencies from requirements.txt')\\n\"\n",
+    "                )\n",
+    "                sm_module_file.write(\n",
+    "                    f'{ind}subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"-r\", \"/opt/ml/processing/requirements/requirements.txt\"])\\n'\n",
+    "                )\n",
+    "                sm_module_file.write(\n",
+    "                    f'{ind}print(\"Installed additional dependencies\")\\n'\n",
+    "                )\n",
+    "            sm_module_file.write(\"\\n\")\n",
+    "            sm_module_file.write(\"\".join(lines))\n",
     "            sm_module_file.write(\"\\n\")\n",
     "            write_preamble(step, sm_module_file, ind)\n",
     "            sm_module_file.write(\"\\n\")\n",
@@ -1462,21 +1473,6 @@
     "                )\n",
     "            else:\n",
     "                sm_module_file.write(f\"def main({', '.join(main_args)}):\\n\")\n",
-    "            if is_processing_step(step):\n",
-    "                sm_module_file.write(\n",
-    "                    f'{ind}has_additional_dependencies = Path(\"/opt/ml/processing/requirements/requirements.txt\").exists()\\n'\n",
-    "                )\n",
-    "                sm_module_file.write(f\"{ind}if has_additional_dependencies:\\n\")\n",
-    "                sm_module_file.write(\n",
-    "                    f\"{ind}{ind}print('Installing additional dependencies from requirements.txt')\\n\"\n",
-    "                )\n",
-    "                sm_module_file.write(\n",
-    "                    f'{ind}{ind}subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"-r\", \"/opt/ml/processing/requirements/requirements.txt\"])\\n'\n",
-    "                )\n",
-    "                sm_module_file.write(\n",
-    "                    f'{ind}{ind}print(\"Installed additional dependencies\")\\n'\n",
-    "                )\n",
-    "\n",
     "            if (\n",
     "                is_processing_step(step)\n",
     "                and \"step_train_vars\" in steps_vars[step.name]\n",
@@ -1825,7 +1821,7 @@
       "Converted test_multistep.ipynb to TestMultistepPipeline in: test_multistep.py\n",
       "Converted test_export.ipynb to TestExportPipeline in: test_export.py\n",
       "Converted test_module.ipynb to TestModulePipeline in: test_module.py\n",
-      "Sagemaker conversion failed for test_multistep_no_params.ipynb, Reason: Step: preprocess depends on variable(s) not in flow scope: \"{'traffic_percent', 'model_level', 'min_date'}\"\n",
+      "Sagemaker conversion failed for test_multistep_no_params.ipynb, Reason: Step: preprocess depends on variable(s) not in flow scope: \"{'min_date', 'traffic_percent', 'model_level'}\"\n",
       "Sagemaker conversion failed for test_data_handling.ipynb, Reason: Unsupported parameter type for sagemaker pipeline: <class 'dict'>\n"
      ]
     }
