--- a/nbs/converters/to_metaflow.ipynb
+++ b/nbs/converters/to_metaflow.ipynb
@@ -1500,7 +1500,7 @@
     "vcpuNum": 96
    }
   ],
-  "instance_type": "ml.m5.large",
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (SageMaker Distribution v0 CPU)",
    "language": "python",
