Fixed bugs related to dataflow between steps in sagemaker. Added some test cases to help catch these better.

--- a/nbs/converters/to_sagemaker.ipynb
+++ b/nbs/converters/to_sagemaker.ipynb
@@ -958,6 +958,7 @@
     "\n",
     "\n",
     "def extract_step_vars(step, param_names, processing_flow_scope, train_flow_scope):\n",
+    "    logger.debug(f\"Extracting step variables: {step.name} params: {param_names} proc scope: {processing_flow_scope} train scope: {train_flow_scope}\")\n",
     "    if len(step.args) == 0:\n",
     "        result = {}\n",
     "    else:\n",
@@ -1101,6 +1102,7 @@
     "\n",
     "    for i, step in enumerate(steps):\n",
     "        return_vars = extract_return_var_names(step)\n",
+    "        logger.debug(f\"Extracted return vars: {return_vars} from step: {step.name}\")\n",
     "\n",
     "        step_vars = extract_step_vars(\n",
     "            step, param_names, proc_flow_scope, train_flow_scope\n",
@@ -1162,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,12 +1220,14 @@
     "            len(step_vars[\"step_proc_vars\"]) > 0\n",
     "            or len(step_vars[\"step_train_vars\"]) > 0\n",
     "        ):\n",
+    "            # For now all output artefacts from training go into model directory. Not yet using the recommended /opt/ml/output/data\n",
+    "            # https://docs.aws.amazon.com/sagemaker/latest/dg/your-algorithms-training-algo-output.html\n",
+    "            proc_inputs = step_vars[\"step_proc_vars\"] if len(step_vars[\"step_train_vars\"]) == 0 else step_vars[\"step_proc_vars\"] + [\"model\"]\n",
     "            flow_file.write(\n",
     "                \"\\n\".join(\n",
     "                    [\n",
-    "                        f'{ind}{ind}{ind}{ind}ProcessingInput(source=self.{outputs[cv]}, destination=\"/opt/ml/processing/input/{cv}\"),\\n'\n",
-    "                        for cv in step_vars[\"step_train_vars\"]\n",
-    "                        + step_vars[\"step_proc_vars\"]\n",
+    "                        f'{ind}{ind}{ind}{ind}ProcessingInput(source=self.{outputs[cv]}, destination=\"/opt/ml/processing/input/{cv}\"),'\n",
+    "                        for cv in proc_inputs\n",
     "                    ]\n",
     "                )\n",
     "            )\n",
@@ -1245,7 +1249,7 @@
     "            flow_file.write(\n",
     "                \"\\n\".join(\n",
     "                    [\n",
-    "                        f'{ind}{ind}{ind}{ind}ProcessingOutput(output_name=\"{v}\", source=\"/opt/ml/processing/output/{v}\"),'\n",
+    "                        f'{ind}{ind}{ind}{ind}ProcessingOutput(destination=f\"{{self.flow_s3_uri}}/{v}\", output_name=\"{v}\", source=\"/opt/ml/processing/output/{v}\"),'\n",
     "                        for v in [x[0] for x in proc_outs]\n",
     "                    ]\n",
     "                )\n",
@@ -1273,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 87,
    "metadata": {
     "tags": []
    },
@@ -1363,6 +1367,7 @@
     "                    f'{ind}{ind}{ind}{ind}\"{training_input}\": TrainingInput(\\n'\n",
     "                )\n",
     "                # TODO store content type mapping\n",
+    "                # parquet should be: \"application/octet-stream\"\n",
     "                flow_file.write(\n",
     "                    f'{ind}{ind}{ind}{ind}{ind}s3_data=self.{outputs[training_input]}, content_type=\"text/csv\"\\n'\n",
     "                )\n",
@@ -1388,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 88,
    "metadata": {
     "tags": []
    },
@@ -1581,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 89,
    "metadata": {
     "tags": []
    },
@@ -1673,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 90,
    "metadata": {
     "tags": []
    },
@@ -1684,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 91,
    "metadata": {
     "tags": []
    },
@@ -1710,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 75,
    "metadata": {
     "tags": []
    },
@@ -1741,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 76,
    "metadata": {
     "tags": []
    },
@@ -1777,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 77,
    "metadata": {
     "tags": []
    },
@@ -1796,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "metadata": {
     "tags": []
    },
@@ -1808,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 79,
    "metadata": {
     "tags": []
    },
@@ -1817,11 +1822,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "                ProcessingInput(source=self.something_step.properties.ProcessingOutputConfig.Outputs[\"message\"].S3Output.S3Uri, destination=\"/opt/ml/processing/input/message\"),\n",
+      "                ProcessingInput(source=self.fit_step.properties.ModelArtifacts.S3ModelArtifacts, destination=\"/opt/ml/processing/input/model\"),\n",
       "Converted test_export_step.ipynb to TestExportStepPipeline in: test_export_step.py\n",
+      "                ProcessingInput(source=self.something_step.properties.ProcessingOutputConfig.Outputs[\"message\"].S3Output.S3Uri, destination=\"/opt/ml/processing/input/message\"),\n",
+      "                ProcessingInput(source=self.preprocess_step.properties.ProcessingOutputConfig.Outputs[\"documents\"].S3Output.S3Uri, destination=\"/opt/ml/processing/input/documents\"),\n",
+      "                ProcessingInput(source=self.fit_step.properties.ModelArtifacts.S3ModelArtifacts, destination=\"/opt/ml/processing/input/model\"),\n",
       "Converted test_multistep.ipynb to TestMultistepPipeline in: test_multistep.py\n",
       "Converted test_export.ipynb to TestExportPipeline in: test_export.py\n",
       "Converted test_module.ipynb to TestModulePipeline in: test_module.py\n",
-      "Sagemaker conversion failed for test_multistep_no_params.ipynb, Reason: Step: preprocess depends on variable(s) not in flow scope: \"{'min_date', 'traffic_percent', 'model_level'}\"\n",
+      "Sagemaker conversion failed for test_multistep_no_params.ipynb, Reason: Step: preprocess depends on variable(s) not in flow scope: \"{'model_level', 'traffic_percent', 'min_date'}\"\n",
       "Sagemaker conversion failed for test_data_handling.ipynb, Reason: Unsupported parameter type for sagemaker pipeline: <class 'dict'>\n"
      ]
     }
