--- a/nbs/converters/to_sagemaker.ipynb
+++ b/nbs/converters/to_sagemaker.ipynb
@@ -958,7 +958,9 @@
     "\n",
     "\n",
     "def extract_step_vars(step, param_names, processing_flow_scope, train_flow_scope):\n",
-    "    logger.debug(f\"Extracting step variables: {step.name} params: {param_names} proc scope: {processing_flow_scope} train scope: {train_flow_scope}\")\n",
+    "    logger.debug(\n",
+    "        f\"Extracting step variables: {step.name} params: {param_names} proc scope: {processing_flow_scope} train scope: {train_flow_scope}\"\n",
+    "    )\n",
     "    if len(step.args) == 0:\n",
     "        result = {}\n",
     "    else:\n",
@@ -1222,7 +1224,11 @@
     "        ):\n",
     "            # For now all output artefacts from training go into model directory. Not yet using the recommended /opt/ml/output/data\n",
     "            # https://docs.aws.amazon.com/sagemaker/latest/dg/your-algorithms-training-algo-output.html\n",
-    "            proc_inputs = step_vars[\"step_proc_vars\"] if len(step_vars[\"step_train_vars\"]) == 0 else step_vars[\"step_proc_vars\"] + [\"model\"]\n",
+    "            proc_inputs = (\n",
+    "                step_vars[\"step_proc_vars\"]\n",
+    "                if len(step_vars[\"step_train_vars\"]) == 0\n",
+    "                else step_vars[\"step_proc_vars\"] + [\"model\"]\n",
+    "            )\n",
     "            flow_file.write(\n",
     "                \"\\n\".join(\n",
     "                    [\n",
@@ -1441,7 +1447,9 @@
     "        ]\n",
     "\n",
     "        with open(sm_module_path, \"w\") as sm_module_file:\n",
-    "            sm_module_file.write(\"# SCIFLOW GENERATED SAGEMAKER MODULE - EDIT COMPANION NOTEBOOK\\n\")\n",
+    "            sm_module_file.write(\n",
+    "                \"# SCIFLOW GENERATED SAGEMAKER MODULE - EDIT COMPANION NOTEBOOK\\n\"\n",
+    "            )\n",
     "            sm_module_file.write(\"import boto3\\n\")\n",
     "            sm_module_file.write(\"import os\\n\")\n",
     "            sm_module_file.write(\"import sys\\n\")\n",
@@ -1450,7 +1458,7 @@
     "            sm_module_file.write(\"from pathlib import Path\\n\")\n",
     "            sm_module_file.write(\"import argparse\\n\")\n",
     "            sm_module_file.write(\"import subprocess\\n\")\n",
-    "            \n",
+    "\n",
     "            if is_processing_step(step):\n",
     "                sm_module_file.write(\n",
     "                    f'has_additional_dependencies = Path(\"/opt/ml/processing/requirements/requirements.txt\").exists()\\n'\n",
