--- a/nbs/parse_module.ipynb
+++ b/nbs/parse_module.ipynb
@@ -384,12 +384,18 @@
     "    return results\n",
     "\"\"\"\n",
     "\n",
-    "step_code =  \"\"\"def fit(documents, workers=workers):\n",
+    "step_code = \"\"\"def fit(documents, workers=workers):\n",
     "    model = Topics(documents, workers=workers)\n",
     "    training_artifact = {\"something\": np.arange(10**3)}\n",
     "    results = {\"model\": model, \"training_artifact\": training_artifact}\n",
     "    return results\"\"\"\n",
-    "two_keys_step = FuncDetails(name=\"fit\",docstring=None, return_stmt=\"results\", args=\"documents,workers\", has_return=True, code=step_code\n",
+    "two_keys_step = FuncDetails(\n",
+    "    name=\"fit\",\n",
+    "    docstring=None,\n",
+    "    return_stmt=\"results\",\n",
+    "    args=\"documents,workers\",\n",
+    "    has_return=True,\n",
+    "    code=step_code,\n",
     ")"
    ]
   },
@@ -508,7 +514,7 @@
     "                        keys.append(key.s)\n",
     "                    elif isinstance(key, ast.Constant):  # For Python 3.8+\n",
     "                        keys.append(key.value)\n",
-    "            \n",
+    "\n",
     "            # Case 2: Variable returning a dictionary\n",
     "            elif isinstance(node.value, ast.Name):\n",
     "                var_name = node.value.id\n",
@@ -521,7 +527,9 @@
     "                                    for key in assign_node.value.keys:\n",
     "                                        if isinstance(key, ast.Str):\n",
     "                                            keys.append(key.s)\n",
-    "                                        elif isinstance(key, ast.Constant):  # For Python 3.8+\n",
+    "                                        elif isinstance(\n",
+    "                                            key, ast.Constant\n",
+    "                                        ):  # For Python 3.8+\n",
     "                                            keys.append(key.value)\n",
     "\n",
     "    return keys"
@@ -573,8 +581,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert ['model', 'training_artifact'] == extract_return_var_names(two_keys_step)\n",
-    "assert ['model', 'training_artifact'] == extract_return_var_names(parse_step(two_keys_return))"
+    "assert [\"model\", \"training_artifact\"] == extract_return_var_names(two_keys_step)\n",
+    "assert [\"model\", \"training_artifact\"] == extract_return_var_names(\n",
+    "    parse_step(two_keys_return)\n",
+    ")"
    ]
   },
   {
