--- a/nbs/test/test_multistep_no_params.ipynb
+++ b/nbs/test/test_multistep_no_params.ipynb
@@ -272,12 +272,9 @@
     "\n",
     "\n",
     "def fit(documents, workers=workers):\n",
-    "    model = Topics(documents, workers=float(workers)*2)\n",
+    "    model = Topics(documents, workers=float(workers) * 2)\n",
     "    training_artifact = {\"some\": np.arange(10**3)}\n",
-    "    results = {\n",
-    "        \"model\": model,\n",
-    "        \"training_artifact\": training_artifact\n",
-    "    }\n",
+    "    results = {\"model\": model, \"training_artifact\": training_artifact}\n",
     "    return results"
    ]
   },
